[project]
name = "logic-canvas"
version = "0.1.0"
description = "Developer knowledge base CLI for algorithms, patterns, and core CS knowledge."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115.0",
  "pyngrok>=7.2.0",
  "rich>=14.0.0",
  "typer>=0.16.0",
  "uvicorn>=0.30.0",
]

[project.scripts]
logic = "logic_canvas.main:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
